package excel.model;

public abstract class Expression {
    public abstract double interpret();
}
